--- a/CP3/styles.css
+++ b/CP3/styles.css
@@ -1,7 +1,7 @@
 /*
     Name: Jake Goldman
     CS 132 Spring 2023
-    Date: May 6, 2023
+    Date: May 20, 2023
 
     This is the styles.css page for the One Million game. It is designed to give the site a 
     consistent and aesthetic feel. It is also designed to reinforce consistency throughout
@@ -49,7 +49,7 @@ h1, #menu-view, #character-stats-display, #dog-stats-display, #details-bar, foot
     background-color: #50555d;    
 }
 
-#menu-view, #character-stats-display, #dog-stats-display {
+#menu-view, #character-stats-display, #dog-stats-display, #menu-view article {
     border-radius: 0.5em;    
 }
 
@@ -74,12 +74,12 @@ footer a {
     margin: 10px;
 }
 
-#dog-stats-display, #character-display {
-    background-color: #9a492e;
+#dog-stats-display, #character-display, #menu-view article {
+    background-color: #7d2c26;
 }
 
 button, .character {
-    background-color: #516f79;
+    background-color: #435e68;
 }
 
 footer, .character-stats {
@@ -144,11 +144,11 @@ footer, .character-stats {
     display: block;
 }
 
-.character-stats {
+.character-stats, #menu-view article {
     padding: 5px;
 }
 
-.character, .character-stats {
+.character, .character-stats, #menu-view article {
     border: 2pt solid black;
 }
 
